--- a/src/pages/Details/Details.css
+++ b/src/pages/Details/Details.css
@@ -119,7 +119,7 @@
     border-radius: 25px;
     height: 350px;
     position: absolute;
-    top: 105%;
+    top: 100%;
     left: 62%;
 }
 #AdOwner{
@@ -221,7 +221,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
     margin-top: -95%;
 }
